RESOLVED FIXED 259949
Regression(266664@main): Reversion bubble does not appear when marker placed at end of autocorrected word
https://bugs.webkit.org/show_bug.cgi?id=259949
Summary Regression(266664@main): Reversion bubble does not appear when marker placed ...
Ryosuke Niwa
Reported 2023-08-08 16:01:43 PDT
When a misspelled word is autocorrected and we place our marker at the end of the word, we want a reversion bubble to appear that indicates the word that was just fixed. However, after 266664@main, we don’t see this reversion bubble appear anymore. Works: 266663@main Fails: 266664@main <rdar://113590651>
Attachments
Ryosuke Niwa
Comment 1 2023-08-08 16:06:59 PDT
EWS
Comment 2 2023-08-08 17:09:45 PDT
Committed 266707@main (acd6c7c14e7f): <https://commits.webkit.org/266707@main> Reviewed commits have been landed. Closing PR #16496 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-08-08 17:10:31 PDT
Note You need to log in before you can comment on or make changes to this bug.