REGRESSION(266664@main): Reversion bubble does not appear when marker placed at end of autocorrected word https://bugs.webkit.org/show_bug.cgi?id=259949

Reviewed by Megan Gardner.

The bug was caused by clearing of m_rangeWithAlternative in startAlternativeTextUITimer.
Just clear the timer instead.

* Source/WebCore/editing/AlternativeTextController.cpp:
(WebCore::AlternativeTextController::startAlternativeTextUITimer):

Canonical link: https://commits.webkit.org/266707@main