Source/WebCore/editing/AlternativeTextController.cpp
@@ -113,7 +113,8 @@ void AlternativeTextController::startAlternativeTextUITimer(AlternativeTextType 
     if (type == AlternativeTextType::Correction)
         m_rangeWithAlternative = std::nullopt;
     m_type = type;
-    stopAlternativeTextUITimer();
+    if (m_timer)
+        m_document.eventLoop().cancelScheduledTask(m_timer);
     m_timer = m_document.eventLoop().scheduleTask(correctionPanelTimerInterval, TaskSource::UserInteraction, [weakThis = WeakPtr { *this }] {
         if (!weakThis)
             return;
